--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^8.23.1",
     "nodemon": "^2.0.19"
   },
   "dependencies": {
